--- a/website/templates/common/head.pug
+++ b/website/templates/common/head.pug
@@ -11,6 +11,8 @@ meta(property="og:title" content="Projet du mois.fr")
 meta(property="og:description" content="Projet du mois.fr est le tableau de bord de la communauté OpenStreetMap en France pour ses actions mensuelles d'amélioration des données")
 meta(property="og:image" content="https://projetdumois.fr/images/header.png")
 meta(rel="canonical" href="https://projetdumois.fr")
+
+link(rel="manifest" href="/static/manifest.webmanifest")
 link(rel="icon" href="/images/favicon.png")
 
 //- CSS
