--- a/website/templates/common/head.pug
+++ b/website/templates/common/head.pug
@@ -12,7 +12,7 @@ meta(property="og:description" content="Projet du mois.fr est le tableau de bord
 meta(property="og:image" content="https://projetdumois.fr/images/header.png")
 meta(rel="canonical" href="https://projetdumois.fr")
 
-link(rel="manifest" href="/static/manifest.webmanifest")
+link(rel="manifest" href="/manifest.webmanifest")
 link(rel="icon" href="/images/favicon.png")
 
 //- CSS
