--- a/website/templates/components/map_sidebar_feature.pug
+++ b/website/templates/components/map_sidebar_feature.pug
@@ -67,168 +67,168 @@ script.
 
 	// Generate button for feature creation / editing
 	function createFeatureButton(container, mode = "add", classes = null, options = {}) {
-		if(editors.pdm) {
-			const optsPdm = Object.fromEntries(Object.entries(options).filter(e => ["tags", "onInternalEdit", "originalCoordinates"].includes(e[0])));
+		if(options.mini && !editors.pdm) { return; }
 
-			// Main button
-			const button = document.createElement("button");
-			button.classList.add("editor-add-btn", "btn");
-			button.setAttribute("type", "button");
-			button.setAttribute("title", editors.pdm.title[mode]);
+		const optsPdm = Object.fromEntries(Object.entries(options).filter(e => ["tags", "onInternalEdit", "originalCoordinates"].includes(e[0])));
 
-			let buttonIcon = document.createElement("span");
-			buttonIcon.classList.add("d-inline-block", "container-svg-fa");
-			buttonIcon.style.height = options.mini ? "24px" : "30px";
-			buttonIcon.appendChild(document.getElementById(mode === "add" ? "map-marker-plus" : "map-marker-edit").firstChild.cloneNode(true));
+		// Main button
+		const button = document.createElement("button");
+		button.classList.add("editor-add-btn", "btn");
+		button.setAttribute("type", "button");
+		button.setAttribute("title", editors.pdm ? editors.pdm.title[mode] : "Plus de détails");
 
-			// PdM action
-			const pdmfct = mode === "add" ? e => onStartNewFeature(optsPdm) : e => onStartEditFeature(Object.assign({ osmid: options.osmid }, optsPdm));
+		let buttonIcon = document.createElement("span");
+		buttonIcon.classList.add("d-inline-block", "container-svg-fa");
+		buttonIcon.style.height = options.mini ? "24px" : "30px";
+		buttonIcon.appendChild(document.getElementById(mode === "add" ? "map-marker-plus" : "map-marker-edit").firstChild.cloneNode(true));
 
-			if(options.mini) {
-				if(classes.includes("btn-floating")) {
-					buttonIcon = document.createElement("i");
-					buttonIcon.classList.add("fa", "fa-plus");
-				}
-				button.appendChild(buttonIcon);
-				button.addEventListener("click", onStartNewFeature);
-				if(typeof classes === "string" && classes.length > 0) { button.classList.add(...classes.split(" ")); }
-				container.appendChild(button);
+		// PdM action
+		const pdmfct = mode === "add" ? e => onStartNewFeature(optsPdm) : e => onStartEditFeature(Object.assign({ osmid: options.osmid }, optsPdm));
+
+		if(options.mini) {
+			if(classes.includes("btn-floating")) {
+				buttonIcon = document.createElement("i");
+				buttonIcon.classList.add("fa", "fa-plus");
+			}
+			button.appendChild(buttonIcon);
+			button.addEventListener("click", onStartNewFeature);
+			if(typeof classes === "string" && classes.length > 0) { button.classList.add(...classes.split(" ")); }
+			container.appendChild(button);
+		}
+		else {
+			const { lat, lng } = options.originalCoordinates || map.getCenter();
+			let dropButton;
+			button.appendChild(buttonIcon);
+
+			button.classList.add("btn-primary", "d-flex", "align-items-center", "justify-content-center");
+			buttonIcon.classList.add("mr-3");
+
+			// Group
+			const group = document.createElement("div");
+			group.classList.add("btn-group");
+			if(typeof classes === "string" && classes.length > 0) { group.classList.add(...classes.split(" ")); }
+
+			button.appendChild(document.createTextNode(options.title || (editors.pdm && editors.pdm.title[mode]) || "Plus de détails"));
+			group.appendChild(button);
+
+			// Dropdown menu
+			const dropdown = document.createElement("div");
+			dropdown.classList.add("dropdown-menu");
+
+			if(editors.pdm && (window.osm_user || !(options.noteid || options.osmoseuuid))) {
+				// Split dropdown button
+				dropButton = document.createElement("button");
+				dropButton.classList.add("btn", "btn-primary", "dropdown-toggle");
+				dropButton.setAttribute("type", "button");
+				dropButton.setAttribute("data-toggle", "dropdown");
+				group.appendChild(dropButton);
+
+				dropButton.classList.add("dropdown-toggle-split");
+				button.addEventListener("click", pdmfct);
+
+				const editWithPdm = document.createElement("a");
+				editWithPdm.classList.add("dropdown-item");
+				editWithPdm.appendChild(document.createTextNode("Avec l'éditeur intégré"));
+				editWithPdm.addEventListener("click", pdmfct);
+				dropdown.appendChild(editWithPdm);
 			}
 			else {
-				const { lat, lng } = options.originalCoordinates || map.getCenter();
-				let dropButton;
-				button.appendChild(buttonIcon);
-
-				button.classList.add("btn-primary", "d-flex", "align-items-center", "justify-content-center");
-				buttonIcon.classList.add("mr-3");
-
-				// Group
-				const group = document.createElement("div");
-				group.classList.add("btn-group");
-				if(typeof classes === "string" && classes.length > 0) { group.classList.add(...classes.split(" ")); }
-
-				button.appendChild(document.createTextNode(options.title || editors.pdm.title[mode]));
-				group.appendChild(button);
-
-				// Dropdown menu
-				const dropdown = document.createElement("div");
-				dropdown.classList.add("dropdown-menu");
-
-				if(window.osm_user || !(options.noteid || options.osmoseuuid)) {
-					// Split dropdown button
-					dropButton = document.createElement("button");
-					dropButton.classList.add("btn", "btn-primary", "dropdown-toggle");
-					dropButton.setAttribute("type", "button");
-					dropButton.setAttribute("data-toggle", "dropdown");
-					group.appendChild(dropButton);
-
-					dropButton.classList.add("dropdown-toggle-split");
-					button.addEventListener("click", pdmfct);
-
-					const editWithPdm = document.createElement("a");
-					editWithPdm.classList.add("dropdown-item");
-					editWithPdm.appendChild(document.createTextNode("Avec l'éditeur intégré"));
-					editWithPdm.addEventListener("click", pdmfct);
-					dropdown.appendChild(editWithPdm);
+				if(!classes.includes("dropup")) {
+					group.classList.add("dropdown");
 				}
-				else {
-					if(!classes.includes("dropup")) {
-						group.classList.add("dropdown");
-					}
-					button.classList.add("dropdown-toggle", "text-wrap");
-					button.setAttribute("data-toggle", "dropdown");
-				}
-
-				const editWithApp = document.createElement("a");
-				editWithApp.classList.add("dropdown-item", "d-sm-none");
-				editWithApp.href = `geo:${lat},${lng}`;
-				editWithApp.appendChild(document.createTextNode("Avec une appli mobile"));
-				dropdown.appendChild(editWithApp);
-
-				const editWithID = document.createElement("a");
-				editWithID.classList.add("dropdown-item", "d-none", "d-sm-block");
-				editWithID.href = `#{CONFIG.OSM_URL}/edit${options.osmid && "?"+options.osmid.replace("/", "=") || ""}#map=20/${lat}/${lng}&#{idParams}`;
-				editWithID.target = "_blank";
-				editWithID.appendChild(document.createTextNode("Avec iD"));
-				dropdown.appendChild(editWithID);
-
-				const editWithJOSM = document.createElement("a");
-				editWithJOSM.classList.add("dropdown-item", "d-none", "d-sm-block");
-				editWithJOSM.addEventListener("click", () => {
-					const { lat, lng } = options.originalCoordinates || map.getCenter();
-					const urlsToLoad = [`#{CONFIG.JOSM_REMOTE_URL}/load_and_zoom?bottom=${lat-0.0005}&top=${lat+0.0005}&right=${lng+0.0005}&left=${lng-0.0005}${options.osmid && `&select=${options.osmid.replace("/", "")}` || ""}&#{josmParams}`];
-					if(options.tags && !options.osmid && Object.keys(options.tags).length > 0) {
-						urlsToLoad.push(`#{CONFIG.JOSM_REMOTE_URL}/add_node?lon=${lng}&lat=${lat}&addtags=${encodeURIComponent(Object.entries(options.tags).map(e => e.join("=")).join("|"))}`);
-					}
-					const next = () => {
-						const url = urlsToLoad.shift();
-						if(url) {
-							fetch(url)
-							.then(() => setTimeout(next, 3000))
-							.catch(e => {
-								console.error(e);
-								alert("Une erreur s'est produite avec la télécommande JOSM");
-							});
-						}
-					};
-					next();
-				});
-				editWithJOSM.appendChild(document.createTextNode("Avec JOSM"));
-				dropdown.appendChild(editWithJOSM);
-
-				if(options.osmoseuuid) {
-					const editWithOsmose = document.createElement("a");
-					editWithOsmose.classList.add("dropdown-item", "d-none", "d-sm-block");
-					editWithOsmose.href = `#{CONFIG.OSMOSE_URL}/fr/error/${options.osmoseuuid}`;
-					editWithOsmose.target = "_blank";
-					editWithOsmose.appendChild(document.createTextNode("Via Osmose"));
-					dropdown.appendChild(editWithOsmose);
-				}
-
-				if(options.textnote) {
-					const editWithPdmNote = document.createElement("a");
-					editWithPdmNote.classList.add("dropdown-item");
-					editWithPdmNote.appendChild(document.createTextNode("Via une note de carte"));
-					editWithPdmNote.addEventListener("click", onStartTextNote);
-					dropdown.appendChild(editWithPdmNote);
-				}
-
-				const editWithOSM = document.createElement("a");
-				editWithOSM.classList.add("dropdown-item", "d-none", "d-sm-block");
-				editWithOSM.href = `#{CONFIG.OSM_URL}/${options.noteid || options.osmid || ""}#map=18/${lat}/${lng}`;
-				editWithOSM.target = "_blank";
-				editWithOSM.appendChild(document.createTextNode("Via OSM.org"));
-				dropdown.appendChild(editWithOSM);
-
-				const editWithMapillary = document.createElement("a");
-				editWithMapillary.classList.add("dropdown-item", "d-none", "d-sm-block");
-				editWithMapillary.href = `#{CONFIG.MAPILLARY_URL}/app/?lat=${lat}&lng=${lng}&z=18`;
-				editWithMapillary.target = "_blank";
-				editWithMapillary.appendChild(document.createTextNode("Via Mapillary"));
-				dropdown.appendChild(editWithMapillary);
-
-				if(options.onExternalEdit) {
-					editWithApp.addEventListener("click", options.onExternalEdit);
-					editWithID.addEventListener("click", options.onExternalEdit);
-					editWithJOSM.addEventListener("click", options.onExternalEdit);
-					editWithOSM.addEventListener("click", options.onExternalEdit);
-					editWithMapillary.addEventListener("click", options.onExternalEdit);
-				}
-
-				if(options.mapcoords) {
-					map.on("moveend", () => {
-						const { lat, lng } = map.getCenter();
-						editWithApp.href = `geo:${lat},${lng}`;
-						editWithID.href = `#{CONFIG.OSM_URL}/edit${options.osmid && "?"+options.osmid.replace("/", "=") || ""}#map=20/${lat}/${lng}&#{idParams}`;
-						editWithOSM.href = `#{CONFIG.OSM_URL}/${options.noteid || options.osmid || ""}#map=18/${lat}/${lng}`;
-						editWithMapillary.href = `#{CONFIG.MAPILLARY_URL}/app/?lat=${lat}&lng=${lng}&z=18`;
-					});
-				}
-
-				group.appendChild(dropdown);
-				container.appendChild(group);
-				new BSN.Dropdown(dropButton || button);
+				button.classList.add("dropdown-toggle", "text-wrap");
+				button.setAttribute("data-toggle", "dropdown");
 			}
+
+			const editWithApp = document.createElement("a");
+			editWithApp.classList.add("dropdown-item", "d-sm-none");
+			editWithApp.href = `geo:${lat},${lng}`;
+			editWithApp.appendChild(document.createTextNode("Avec une appli mobile"));
+			dropdown.appendChild(editWithApp);
+
+			const editWithID = document.createElement("a");
+			editWithID.classList.add("dropdown-item", "d-none", "d-sm-block");
+			editWithID.href = `#{CONFIG.OSM_URL}/edit${options.osmid && "?"+options.osmid.replace("/", "=") || ""}#map=20/${lat}/${lng}&#{idParams}`;
+			editWithID.target = "_blank";
+			editWithID.appendChild(document.createTextNode("Avec iD"));
+			dropdown.appendChild(editWithID);
+
+			const editWithJOSM = document.createElement("a");
+			editWithJOSM.classList.add("dropdown-item", "d-none", "d-sm-block");
+			editWithJOSM.addEventListener("click", () => {
+				const { lat, lng } = options.originalCoordinates || map.getCenter();
+				const urlsToLoad = [`#{CONFIG.JOSM_REMOTE_URL}/load_and_zoom?bottom=${lat-0.0005}&top=${lat+0.0005}&right=${lng+0.0005}&left=${lng-0.0005}${options.osmid && `&select=${options.osmid.replace("/", "")}` || ""}&#{josmParams}`];
+				if(options.tags && !options.osmid && Object.keys(options.tags).length > 0) {
+					urlsToLoad.push(`#{CONFIG.JOSM_REMOTE_URL}/add_node?lon=${lng}&lat=${lat}&addtags=${encodeURIComponent(Object.entries(options.tags).map(e => e.join("=")).join("|"))}`);
+				}
+				const next = () => {
+					const url = urlsToLoad.shift();
+					if(url) {
+						fetch(url)
+						.then(() => setTimeout(next, 3000))
+						.catch(e => {
+							console.error(e);
+							alert("Une erreur s'est produite avec la télécommande JOSM");
+						});
+					}
+				};
+				next();
+			});
+			editWithJOSM.appendChild(document.createTextNode("Avec JOSM"));
+			dropdown.appendChild(editWithJOSM);
+
+			if(options.osmoseuuid) {
+				const editWithOsmose = document.createElement("a");
+				editWithOsmose.classList.add("dropdown-item", "d-none", "d-sm-block");
+				editWithOsmose.href = `#{CONFIG.OSMOSE_URL}/fr/error/${options.osmoseuuid}`;
+				editWithOsmose.target = "_blank";
+				editWithOsmose.appendChild(document.createTextNode("Via Osmose"));
+				dropdown.appendChild(editWithOsmose);
+			}
+
+			if(options.textnote) {
+				const editWithPdmNote = document.createElement("a");
+				editWithPdmNote.classList.add("dropdown-item");
+				editWithPdmNote.appendChild(document.createTextNode("Via une note de carte"));
+				editWithPdmNote.addEventListener("click", onStartTextNote);
+				dropdown.appendChild(editWithPdmNote);
+			}
+
+			const editWithOSM = document.createElement("a");
+			editWithOSM.classList.add("dropdown-item", "d-none", "d-sm-block");
+			editWithOSM.href = `#{CONFIG.OSM_URL}/${options.noteid || options.osmid || ""}#map=18/${lat}/${lng}`;
+			editWithOSM.target = "_blank";
+			editWithOSM.appendChild(document.createTextNode("Via OSM.org"));
+			dropdown.appendChild(editWithOSM);
+
+			const editWithMapillary = document.createElement("a");
+			editWithMapillary.classList.add("dropdown-item", "d-none", "d-sm-block");
+			editWithMapillary.href = `#{CONFIG.MAPILLARY_URL}/app/?lat=${lat}&lng=${lng}&z=18`;
+			editWithMapillary.target = "_blank";
+			editWithMapillary.appendChild(document.createTextNode("Via Mapillary"));
+			dropdown.appendChild(editWithMapillary);
+
+			if(options.onExternalEdit) {
+				editWithApp.addEventListener("click", options.onExternalEdit);
+				editWithID.addEventListener("click", options.onExternalEdit);
+				editWithJOSM.addEventListener("click", options.onExternalEdit);
+				editWithOSM.addEventListener("click", options.onExternalEdit);
+				editWithMapillary.addEventListener("click", options.onExternalEdit);
+			}
+
+			if(options.mapcoords) {
+				map.on("moveend", () => {
+					const { lat, lng } = map.getCenter();
+					editWithApp.href = `geo:${lat},${lng}`;
+					editWithID.href = `#{CONFIG.OSM_URL}/edit${options.osmid && "?"+options.osmid.replace("/", "=") || ""}#map=20/${lat}/${lng}&#{idParams}`;
+					editWithOSM.href = `#{CONFIG.OSM_URL}/${options.noteid || options.osmid || ""}#map=18/${lat}/${lng}`;
+					editWithMapillary.href = `#{CONFIG.MAPILLARY_URL}/app/?lat=${lat}&lng=${lng}&z=18`;
+				});
+			}
+
+			group.appendChild(dropdown);
+			container.appendChild(group);
+			new BSN.Dropdown(dropButton || button);
 		}
 	}
 
@@ -340,7 +340,7 @@ script.
 			.then(res => res.json())
 			.then(meta => {
 				const labels = osmoseLabels[`${meta.item}_${meta.class}`] || osmoseLabels[`${meta.item}_all`] || { name: meta.title.auto };
-				const buttons = osmoseButtons[`${meta.item}_${meta.class}`] || osmoseButtons[`${meta.item}_all`] || { "done": "Résolu", "false": "Faux positif" };
+				const buttons = Object.assign({ done: "C'est fait", false: "Rien ici", add: "Intégrer cet objet" }, osmoseButtons[`${meta.item}_all`], osmoseButtons[`${meta.item}_${meta.class}`]);
 
 				let tags = [];
 				let tagsForEdit = {};
@@ -396,7 +396,7 @@ script.
 					tags: tagsForEdit,
 					osmid: elem && elem.type+"/"+elem.id,
 					osmoseuuid: meta.uuid,
-					onExternalEdit: () => divButtons.insertBefore(divButtonDone, divButtonFalse),
+					onExternalEdit: editors.pdm ? () => divButtons.insertBefore(divButtonDone, divButtonFalse) : null,
 					onInternalEdit: markOsmose("done", feature, true),
 					originalCoordinates
 				});
@@ -408,6 +408,7 @@ script.
 		// Notes from OSM
 		else if(s.startsWith("notes_")) {
 			const noteSource = notesSources[p.pdm_note_source];
+			const buttons = Object.assign({ close: "C'est fait" }, noteSource.buttons);
 			const cmts = typeof p.comments === "object" ? p.comments : JSON.parse(p.comments);
 			const notesStatuses = { "opened": "Ouvert", "closed": "Fermé", "reopened": "Réouvert", "commented": "Commentaire" };
 
@@ -474,9 +475,9 @@ script.
 
 			const divButtonDone = document.createElement("button");
 			divButtonDone.classList.add("btn", "btn-success", "w-50");
-			divButtonDone.appendChild(document.createTextNode("✔ "+noteSource.buttons.close));
+			divButtonDone.appendChild(document.createTextNode("✔ "+buttons.close));
 			divButtonDone.addEventListener("click", () => closeNote(p));
-			const labelConnected = "Marquer cet élément comme \""+noteSource.buttons.close+"\" si vous avez ajouté/corrigé le point dans OpenStreetMap";
+			const labelConnected = "Marquer cet élément comme \""+buttons.close+"\" si vous avez ajouté/corrigé le point dans OpenStreetMap";
 			const labelDisconnected = "Vous devez être connecté pour marquer la note comme résolue.";
 			if(!window.osm_user) {
 				divButtonDone.setAttribute("disabled", "");
@@ -508,7 +509,7 @@ script.
 				osmid: feature ? featureId : undefined,
 				originalCoordinates: feature ? { lng: feature.geometry.coordinates[0], lat: feature.geometry.coordinates[1] } : originalCoordinates,
 				tags,
-				onExternalEdit: () => divButtons.insertBefore(divButtonDone, divButtonComment),
+				onExternalEdit: editors.pdm ? () => divButtons.insertBefore(divButtonDone, divButtonComment) : null,
 				onInternalEdit: () => closeNote(p)
 			});
 
