--- a/website/templates/components/map_editor.pug
+++ b/website/templates/components/map_editor.pug
@@ -22,7 +22,7 @@ form#pdm-editor-form
 						select.form-control(id=`pdm-editor_${field.tag}` name=field.tag required=(!field.optional || false))
 							option(value="")
 							each kv in field.values
-								option(value=kv.v)= kv.l
+								option(value=(kv.v || JSON.stringify(kv.tags)))= kv.l
 					else if field.type === "3states"
 						div
 							div.form-check.form-check-inline
@@ -111,6 +111,30 @@ script.
 					editorFormDom.elements[e[0]].value = e[1];
 				}
 			});
+
+			// Auto-select appropriate entry in select with multiple tags
+			if(editors.pdm && editors.pdm.fields && editors.pdm.fields.find(fld => fld.type === "select" && fld.tag.startsWith("_"))) {
+				editors.pdm.fields.filter(fld => fld.type === "select" && fld.tag.startsWith("_"))
+				.forEach(field => {
+					// Read each response for this field
+					for(let v of field.values) {
+						// Check if all tags in this response match feature
+						let hasAllTags = true;
+						for(let k in v.tags) {
+							if(currentEditorData.tags[k] !== v.tags[k]) {
+								hasAllTags = false;
+								break;
+							}
+						}
+
+						// If matching, make this response as field value
+						if(hasAllTags) {
+							editorFormDom.elements[field.tag].value = JSON.stringify(v.tags);
+							break;
+						}
+					}
+				});
+			}
 		}
 
 		editorFormDom.classList.remove("d-none");
@@ -225,8 +249,8 @@ script.
 	function onFeatureFormSubmit(e) {
 		e.preventDefault();
 		showMarker();
-		const formData = Object.fromEntries([...new FormData(e.target)].filter(kv => kv[1] && kv[1].toString().trim() !== ""));
-		const emptyTags = Object.fromEntries([...new FormData(e.target)].filter(kv => kv[0] && kv[0].toString().trim() !== "" && !kv[1] || kv[1].trim() === ""));
+		const formData = Object.fromEntries([...new FormData(e.target)].filter(kv => kv[0] && !kv[0].startsWith("_") && kv[1] && kv[1].toString().trim() !== ""));
+		const emptyTags = Object.fromEntries([...new FormData(e.target)].filter(kv => kv[0] && kv[0].toString().trim() !== "" && !kv[0].startsWith("_") && !kv[1] || kv[1].trim() === ""));
 		const fixedTags = Object.fromEntries(
 			editors.pdm.fields
 			.filter(f => f.type === "hidden")
@@ -235,7 +259,12 @@ script.
 			.map(e => e[1] === "*" && currentEditorData.tags && currentEditorData.tags[e[0]] ? [e[0], currentEditorData.tags[e[0]]] : e)
 			.filter(e => e[1] !== "*")
 		);
-		const tagsToApply = Object.assign({}, fixedTags, formData);
+		let multiselectTags = {};
+		[...new FormData(e.target)].filter(kv => kv[0] && kv[0].startsWith("_") && kv[1] && kv[1].toString().trim() !== "").forEach(e => {
+			multiselectTags = Object.assign(multiselectTags, JSON.parse(e[1]));
+		});
+
+		const tagsToApply = Object.assign({}, fixedTags, formData, multiselectTags);
 
 		if(osmApi && currentEditorData && Object.keys(tagsToApply).length > 0) {
 			// Show wait message
