--- a/website/templates/common/body_header.pug
+++ b/website/templates/common/body_header.pug
@@ -1,4 +1,4 @@
-div.container-fluid
+div.container-fluid.d-none.d-md-block
 	header.blog-header.py-3
 		div.row.flex-nowrap.justify-content-between.align-items-center
 			div.col-12.text-center
