--- a/website/templates/components/map_sidebar.pug
+++ b/website/templates/components/map_sidebar.pug
@@ -6,7 +6,7 @@ div#pdm-map-sidebar.pdm-hidden
 
 	div.overflow-auto.h-100.w-100.pdm-sidebar-content
 		//- Default panel showing legend
-		div.pdm-sidebar-default.m-3
+		div.pdm-sidebar-default.mx-3.mt-2.mb-3
 			include map_sidebar_legend.pug
 
 		//- Display features list
