--- a/website/templates/components/map_sidebar_legend.pug
+++ b/website/templates/components/map_sidebar_legend.pug
@@ -1,11 +1,12 @@
-a.d-inline-block.d-md-none.w-100.text-center.mb-2(href="/" title="Retour à la page d'accueil" style="border-bottom: 1px solid #bbb")
-	img.mb-2(style="max-width: 100%; max-height: 100px" src="/images/logo.png" alt="Projet du mois")
+a.d-inline-block.d-md-none.w-100.text-center.mb-1(href="/" title="Retour à la page d'accueil")
+	img(style="max-width: 100%; height: 40px" src="/images/logo_mini.png" alt="Projet du mois")
 
-div.map-legend
-	h5 Légende
+
+//- Legend entries
+div.map-legend.mb-2.pb-2(style="border-bottom: 1px solid #bbb")
 	each lg in legend
 		div(id=`pdm-legend-${lg.layerId}` title="Afficher/masquer la couche")
-			span(style=`background-color: ${lg.color}`)
+			div.pdm-color-patch(style=`border-color: ${lg.color}`)
 			| #{lg.label}
 
 //- Make legend symbol clickable to enable/disable layer
@@ -28,43 +29,35 @@ div.map-legend
 
 script !{legendClickEvents}
 
-if editors.pdm
-	h5.mt-3.pt-2(style="border-top: 1px solid #bbb") Éditer
-	div#legend-edit-button
 
-h5.mt-3.pt-2(style="border-top: 1px solid #bbb") Fond de carte
-div.btn-group.btn-group-lg.w-100(role="group")
-	button.btn.btn-secondary#pdm-bg-map(role="button")
-		i.fa.fa-map.mr-1
-		| Plan
-	button.btn.btn-outline-secondary#pdm-bg-aerial(role="button")
-		i.fa.fa-satellite.mr-1
-		| Satellite
+//- Editor button
+if editors.pdm
+	div#legend-edit-button.mb-2
+
+
+//- KML Export button
+a#pdm-export-kml.btn.btn-block.btn-outline-secondary(role="button" title="Télécharger un fichier KML pour contribuer avec une application de smartphone")
+	i.fa.fa-download.mr-1
+	| Exporter les points à vérifier
 
 script.
-	const btnBgMap = document.getElementById("pdm-bg-map");
-	const btnBgAerial = document.getElementById("pdm-bg-aerial");
+	const osmoseLabels = !{JSON.stringify(osmoseLabels)};
+	const btnExportKml = document.getElementById("pdm-export-kml");
 
-	btnBgMap.addEventListener("click", e => {
-		btnBgMap.classList.remove("btn-outline-secondary");
-		btnBgMap.classList.add("btn-secondary");
-		btnBgAerial.classList.remove("btn-secondary");
-		btnBgAerial.classList.add("btn-outline-secondary");
-		map.setLayoutProperty("bg_map", "visibility", "visible");
-		map.setLayoutProperty("bg_aerial", "visibility", "none");
-		if(window.innerWidth < 576) {
-			window.dispatchEvent(new CustomEvent("pdm_sidebar_use", { detail: { close: true } }));
+	function updateExportKmlLink() {
+		if(osmoseLabels && Object.keys(osmoseLabels).length > 0) {
+			const items = Object.keys(osmoseLabels).map(ol => ol.split("_")[0]).join(",");
+			const classes = Object.keys(osmoseLabels).length > 1 ? "all" : Object.keys(osmoseLabels)[0].split("_").pop();
+			const params = `item=${items}&class=${classes !== "all" ? classes : ""}`;
+			const bbox = `${map.getBounds()._sw.lng}%2C${map.getBounds()._sw.lat}%2C${map.getBounds()._ne.lng}%2C${map.getBounds()._ne.lat}`;
+			btnExportKml.href = `#{CONFIG.OSMOSE_URL}/fr/errors.kml?zoom=${map.getZoom()}&${params}&bbox=${bbox}`;
 		}
-	});
+		else {
+			btnExportKml.classList.add("d-none");
+		}
+	}
 
-	btnBgAerial.addEventListener("click", e => {
-		btnBgAerial.classList.remove("btn-outline-secondary");
-		btnBgAerial.classList.add("btn-secondary");
-		btnBgMap.classList.remove("btn-secondary");
-		btnBgMap.classList.add("btn-outline-secondary");
-		map.setLayoutProperty("bg_map", "visibility", "none");
-		map.setLayoutProperty("bg_aerial", "visibility", "visible");
-		if(window.innerWidth < 576) {
-			window.dispatchEvent(new CustomEvent("pdm_sidebar_use", { detail: { close: true } }));
-		}
+	window.addEventListener("load", e => {
+		updateExportKmlLink();
+		map.on("moveend", updateExportKmlLink);
 	});
