Display opened notes stats (closes #72)

--- a/website/templates/components/stats.pug
+++ b/website/templates/components/stats.pug
@@ -192,7 +192,7 @@ script.
 
 			// Notes count + chart
 			if(res.chartNotes) {
-				addBlock(res.closedNotes, "notes résolues");
+				addBlock(res.openedNotes, `notes ouvertes (${res.pctClosedNotes}% résolues)`);
 
 				const myChart = new Chart(document.getElementById("stats-chart-notes").getContext("2d"), {
 					type: "line",
