--- a/website/templates/pages/map.pug
+++ b/website/templates/pages/map.pug
@@ -7,6 +7,9 @@ html(lang="fr")
 		//- Map specific libraries
 		script(src="/lib/mapbox-gl/mapbox-gl.js")
 		script(src="/lib/swiped-events/swiped-events.js")
+		script(src="/turf.js")
+		script.
+			const booleanContains = turf.default;
 
 	body(data-swipe-ignore="true")
 		include ../components/map_navbar.pug
