Fix display of leaderboard

--- a/website/templates/components/stats.pug
+++ b/website/templates/components/stats.pug
@@ -13,7 +13,7 @@ div.row
 			+user_connect
 		div#stats-leaderboard-container.d-none.row.align-items-center
 			div#stats-podium.col-md-7.row.justify-content-start.align-items-end.no-gutters.mb-3.mb-md-0
-			div.overflow-auto.col-md-5.pr-0(style="max-height: 300px")
+			div.overflow-auto.col-md-5.px-0(style="max-height: 300px")
 				table.table.table-sm
 					thead.sticky-top.thead-light
 						tr
