Add banner for OSMFR and Principles for digital dev (closes #69)

--- a/website/templates/common/footer.pug
+++ b/website/templates/common/footer.pug
@@ -1,2 +1,12 @@
-footer.blog-footer
-	p Copyright 2020 ProjetDuMois.fr - Développé sous licence libre AGPL 3.0
+p Copyright 2020 ProjetDuMois.fr - Développé sous licence libre AGPL 3.0
+div.container.text-left
+	div.row
+		div.col-12.col-md-6.mb-2
+			a(href="https://openstreetmap.fr/" target="_blank")
+				| Un projet supporté par l'association
+				img.d-block(src="/images/osmfr.svg" alt="OpenStreetMap France" style="max-height: 70px; max-width: 100%")
+
+		div.col-12.col-md-6.mb-2
+			a(href="https://digitalprinciples.org/" target="_blank")
+				| Ce projet adhère aux
+				img.d-block(src="/images/pdd.png" alt="Principes pour le développement numérique" style="max-height: 70px; max-width: 100%")
