--- a/website/templates/layout.pug
+++ b/website/templates/layout.pug
@@ -28,4 +28,4 @@ html(lang="fr")
 		//- About
 		footer.blog-footer
 			block footer
-				p Copyright 2020 ProjetDuMois.fr - Développé sous licence libre AGPL 3.0
+			include common/footer.pug
