Change edit button wording (see #86)

--- a/website/templates/components/map_editor.pug
+++ b/website/templates/components/map_editor.pug
@@ -203,7 +203,7 @@ script.
 		currentEditorData = options;
 		currentEditorData.mode = "edit";
 		editorMoveButton.classList.add("d-none");
-		editorSubmitButton.innerHTML = `<i class="fa fa-edit mr-2"></i> Éditer`;
+		editorSubmitButton.innerHTML = `<i class="fa fa-check mr-2"></i> Valider`;
 		loadForm();
 		editorFormDom.addEventListener("submit", onFeatureFormSubmit);
 
